--- a/Zettel1/Zettel1/Zettel1.vcxproj
+++ b/Zettel1/Zettel1/Zettel1.vcxproj
@@ -147,6 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Aufgabe2.h" />
+    <ClInclude Include="Aufgabe3.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
