Next Task started. b/w Picture with random dots generated. First try started to implement the vectors.

--- a/OpenMPZettel/OpenMPZettel/OpenMPZettel.vcxproj.filters
+++ b/OpenMPZettel/OpenMPZettel/OpenMPZettel.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="bitmap_image.hpp">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="OpenMPZettel.cpp">
+    <ClCompile Include="Aufgabe2.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Aufgabe1.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
